--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 # Reserved files
 # =========================
 
-make.cmd
-CHANGELOG
-LICENSE
+# Eclipse
+.settings
+.buildpath
+.project
 
 # Windows image file caches
 Thumbs.db
@@ -24,6 +25,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+*.url
 
 # =========================
 # Operating System Files
@@ -49,3 +51,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+administrator/components/com_j2xml/CHANGELOG
